style: add hover to profile image

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
             src="https://avatars.githubusercontent.com/u/27663011?v=4"
             alt="Profile picture"
           />
+          <div class="profile__overlay">
+            <span class="profile__img-button"></span>
+          </div>
         </div>
         <div class="profile__container-middle">
           <div class="profile__subcontainer-top">
