feat: set-up API class

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="profile__container-middle">
           <div class="profile__subcontainer-top">
-            <h1 class="profile__name">Luis Tellez</h1>
+            <h1 class="profile__name">Luis</h1>
             <button class="profile__edit-button">
               <img
                 class="profile__edit-icon"
@@ -39,7 +39,7 @@
             </button>
           </div>
           <div class="profile__subcontainer-bottom">
-            <h2 class="profile__title">Front-end Developer</h2>
+            <h2 class="profile__title">Front-end</h2>
           </div>
         </div>
         <div class="profile__container-right">
