style: add CSS rules for card like counter

--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,10 @@
         <img class="card__img" src=" " alt=" " />
         <div class="card__text-container">
           <h2 class="card__title"></h2>
-          <button class="card__like-button"></button>
+          <div class="card__like-container">
+            <button class="card__like-button"></button>
+            <span class="card__like-counter">1</span>
+          </div>
         </div>
       </div>
     </template>
