--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
             placeholder="Enlace a la imágen"
             required
           />
-          <span class="modal__error" id="new-place-url-error">
+          <span class="modal__error" id="new-place-url_error">
             Por favor, rellena este campo.</span
           >
           <button class="modal__form-submit modal__form-profile">
