--- a/src/index.html
+++ b/src/index.html
@@ -154,12 +154,12 @@
         <form class="modal__form modal__form_profile-edit" name="newProfileImg">
           <input
             class="modal__input modal__profile-url"
-            id="new-place-url"
+            id="new-profile-url"
             type="url"
             placeholder="Enlace a la imágen"
             required
           />
-          <span class="modal__error" id="new-place-url_error">
+          <span class="modal__error" id="new-profile-url-error">
             Por favor, rellena este campo.</span
           >
           <button class="modal__form-submit modal__form-profile">
